fix: resolve CORS configuration and restore authentication